# NarezalOchka

./: .gitignore  gui.spec  main.py  pyproject.toml
kstrmcut/: gui.py
kstrmcut/core/: convert.py
