[tool.poetry]
name = "kstrmcut"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
moviepy = "^1.0.3"
pysimplegui = "^4.60.4"
pyinstaller = "^5.6.2"
tcd = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
